[FIX] heading center alignment

--- a/src/components/custom-accordion-item/custom-accordion-item.module.css
+++ b/src/components/custom-accordion-item/custom-accordion-item.module.css
@@ -32,6 +32,8 @@
       margin: 0;
 
       font: inherit;
+
+      text-align: start;
     }
 
     .chevron {
